# models

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  flake.nix  mise.toml
.claude/rules/: tui-agents-tab.md  tui-benchmarks-tab.md  tui-models-tab.md  tui-status-tab.md  tui-style-guide.md
.github/workflows/: build-with-nix.yml  ci.yml  flakehub-publish-tagged.yml  release.yml  snapshot-stats.yml  update-benchmarks.yml
data/: agents.json  benchmarks.json
data/stats/: README.md  jsdelivr-history.json  self-ping
data/v2/: aa.json  arena.json  epoch.json  llmstats.json
infra/benchmark-trigger/: README.md  package.json  wrangler.toml
infra/benchmark-trigger/src/: index.ts
packaging/aur/models-bin/: PKGBUILD
packaging/aur/modelsdev-git/: PKGBUILD
scripts/: snapshot-stats.sh
src/: CLAUDE.md  config.rs  data.rs
src/agents/: CLAUDE.md  changelog_parser.rs  data.rs  detect.rs
src/benchmarks/: CLAUDE.md  fetch.rs  mod.rs  multi.rs  schema.rs  sources.rs  store.rs  traits.rs
src/cli/: agents.rs  benchmarks.rs  models.rs
src/tui/: app.rs  event.rs  mod.rs  mouse.rs  ui.rs
src/tui/agents/: CLAUDE.md  app.rs  mod.rs  render.rs
src/tui/benchmarks/: CLAUDE.md  app.rs  compare.rs  radar.rs  render.rs
src/tui/models/: app.rs  render.rs
src/tui/status/: app.rs  detail.rs  overall.rs  render.rs
tests/fixtures/: aa_raw_sample.json
tests/fixtures/arena/: agent.json  code.json  document.json  search.json  text.json  vision.json
tests/fixtures/epoch/: aider_polyglot_external.csv  epoch_capabilities_index.csv  frontiermath.csv  gpqa_diamond.csv  hle_external.csv  malformed.csv  swe_bench_verified.csv  terminalbench_external.csv
tests/fixtures/llmstats/: models_sample.json  rankings_sample.json
website/: CLAUDE.md  DESIGN.md  astro.config.ts
website/src/components/: Features.astro  Footer.astro  Install.astro  ReyamiraMark.astro
website/src/data/: site.ts
