[package]
name = "modelsdev"
version = "0.13.0"
edition = "2021"
# The `transform` [[bin]] makes bare `cargo run` ambiguous without this.
default-run = "models"
description = "A fast TUI and CLI for browsing AI models, benchmarks, and coding agents"
license = "MIT"
repository = "https://github.com/reyamira/models"
readme = "README.md"
keywords = ["cli", "tui", "ai", "models", "llm"]
categories = ["command-line-utilities"]

[[bin]]
name = "models"
path = "src/main.rs"

# Data pipeline transform binary — NOT built by default (so `cargo install
# modelsdev` skips it). Build/run with `--features pipeline`. Shares the v2
# schema via a `#[path]` module include since the crate has no lib target.
[[bin]]
name = "transform"
path = "src/bin/transform/main.rs"
required-features = ["pipeline"]

[features]
pipeline = ["dep:csv"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "blocking"] }

# Async runtime
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "process",
    "io-util",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Regex
regex = "1"

# String similarity (Jaro-Winkler for T6 fuzzy matching)
strsim = "0.11"

# TUI
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = "0.29"

# Charts / visualization
tui-piechart = "0.3"

# Error handling
anyhow = "1"

# Formatting
comfy-table = "7"

# Clipboard
arboard = "3"

# Browser
open = "5"

# Version comparison
semver = "1"

# Cross-platform paths
dirs = "6"

# Config file parsing
toml = "0.8"

# Text wrapping
textwrap = "0.16"

# Markdown rendering (CLI mode)
termimad = "0.30"

# Interactive prompts (fuzzy version picker)
dialoguer = { version = "0.11", features = ["fuzzy-select"] }

# Markdown parsing (changelog normalization)
comrak = { version = "0.36", default-features = false }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# CSV parsing — ONLY for the `pipeline` feature's `transform epoch` (RFC-4180
# quoting / embedded newlines in Epoch CSVs). Optional + feature-gated so the
# published `models` binary never links it.
csv = { version = "1", optional = true }

# Terminal styling (used for dialoguer theme)
console = "0.15"
unicode-width = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.deb]
maintainer = "arimxyer"
copyright = "2024-2026 arimxyer"
license-file = ["LICENSE", "0"]
section = "utils"
priority = "optional"
assets = [
    ["target/release/models", "usr/bin/", "755"],
]
extended-description = "Browse AI models, benchmarks, and coding agents from the terminal"
depends = "libc6"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/models", dest = "/usr/bin/models", mode = "0755" },
]
